SERVER-55552 Backup can copy the state where the collection ident is dropped but not the catalog entry for un-replicated collections